<resources>
    <string name="app_name">玩安卓</string>
    <string name="like">喜欢</string>
    <string name="profile_avatar">头像</string>
    <string name="profile_mine_score">我的积分</string>
    <string name="profile_enter">进入</string>
    <string name="welcome">欢迎使用</string>
    <string name="username_input_tip">请输入用户名</string>
    <string name="password_input_tip">请输入密码</string>
    <string name="login">登录</string>
    <string name="dot">•</string>
    <string name="level">登录: %d</string>
    <string name="rank">排名: %s</string>
    <string name="title_home">首页</string>
    <string name="title_question">问答</string>
    <string name="title_system">体系</string>
    <string name="title_profile">我的</string>
</resources>
